--- a/app/views/dated/foreachproducts.html.haml
+++ b/app/views/dated/foreachproducts.html.haml
@@ -1,6 +1,6 @@
 .body
   .body__body2
-    = render partial: 'products/plusbuttom'
+    = render partial: 'dated/plusbuttom'
     .body__body2--tops
       = render partial: 'tops/header'
       .serectbox
