--- a/app/views/tops/index.html.haml
+++ b/app/views/tops/index.html.haml
@@ -1,6 +1,6 @@
 .body
   .body__body2
-    = render partial: 'products/plusbuttom'
+    = render partial: 'dated/plusbuttom'
     .body__body2--tops
       = render partial: 'tops/header'
     .body__body2--tops--images
@@ -59,7 +59,7 @@
           .body__body2--tops--machinebox--machineno01--monthbox--monthmonth
             2月
         .body__body2--tops--machinebox--machineno01--cardbox
-          = render partial: 'products/card'
+          = render partial: 'dated/card'
         #march.body__body2--tops--machinebox--machineno01--monthbox
           .body__body2--tops--machinebox--machineno01--monthbox--monthmonth
             3月
